# text-tokenizer

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
.specstory/history/: 2025-07-14_08-05Z-讨论优化建议.md  2025-07-14_08-37Z-有什么可以优化的.md  2025-07-14_08-51Z-生成英文的-readme-文件.md  2025-07-17_03-30Z-resolve-clone-error-in-code.md  2025-07-17_06-25Z-检查代码并添加数据库逻辑.md
src/: main.rs  tokenizer.rs
src/db/: clickhouse.rs  file.rs  mod.rs  token.rs
ui/: package.json  vite.config.ts
ui/src/: App.tsx
ui/src/components/ui/: sonner.tsx
